unpackaged/main/default/objects/Account/fields/ABM__c.field-meta.xml
<CustomField>
    <fullName>ABM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account Based Marketing</description>
    <inlineHelpText>Account Based Marketing</inlineHelpText>
    <label>ABM</label>
    <type>Checkbox</type>
</CustomField>