unpackaged/main/default/objects/Account/fields/Account_18_Character_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_18_Character_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account 18 Character ID</label>
    <type>Text</type>
</CustomField>