unpackaged/main/default/objects/Account/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>It&#39;s the Power of One (you&#39;re welcome!)</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>pwned!</inlineHelpText>
    <label>Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>