unpackaged/main/default/objects/Account/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <label>Account Balance</label>
    <summarizedField>blng__Invoice__c.blng__Balance__c</summarizedField>
    <summaryFilterItems>
        <field>blng__Invoice__c.blng__InvoiceStatus__c</field>
        <operation>equals</operation>
        <value>Posted</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__Invoice__c.blng__Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>