unpackaged/main/default/objects/Account/fields/Account_Legacy_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Legacy_Org_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Account Legacy Org ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>