unpackaged/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>1.  Cold</fullName>
                <isActive>false</isActive>
                <label>1.  Cold</label>
            </value>
            <value>
                <fullName>2.  Working</fullName>
                <isActive>false</isActive>
                <label>2.  Working</label>
            </value>
            <value>
                <fullName>3.  Qualifying</fullName>
                <isActive>false</isActive>
                <label>3.  Qualifying</label>
            </value>
            <value>
                <fullName>4.  Passed</fullName>
                <isActive>false</isActive>
                <label>4.  Passed</label>
            </value>
            <value>
                <fullName>5.  Nurture</fullName>
                <isActive>false</isActive>
                <label>5.  Nurture</label>
            </value>
            <value>
                <fullName>6.  Avoid</fullName>
                <isActive>false</isActive>
                <label>6.  Avoid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>