unpackaged/main/default/objects/Account/fields/Alert_Banner__c.field-meta.xml
<CustomField>
    <fullName>Alert_Banner__c</fullName>
    <description>This field was marked for removal and deletion on 1/21/2019</description>
    <formula>IF(Inactive_Account__c = True,

IMAGE(&quot;https://itprotv12345--c.na73.content.force.com/servlet/servlet.FileDownload?file=0151I000001qZz8&quot;,&quot;&quot;,100,200),

&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alert - Deleted 1/21/19</label>
    <type>Text</type>
</CustomField>