unpackaged/main/default/objects/Account/fields/Authorization_Status__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Status__c</fullName>
    <formula>TEXT(LAST_Payment_Transaction__r.blng__GatewayStatus__c)</formula>
    <label>Authorization Status</label>
    <type>Text</type>
</CustomField>