unpackaged/main/default/objects/Account/fields/Bill_to_Contact2__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>