unpackaged/main/default/objects/Account/fields/Bill_to_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Bill to Contact 3)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>