unpackaged/main/default/objects/Account/fields/Billing_Contact_2_ID_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_2_ID_TEMP__c</fullName>
    <formula>Bill_to_Contact2__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact 2 ID TEMP</label>
    <type>Text</type>
</CustomField>