unpackaged/main/default/objects/Account/fields/Billing_Contact_Id_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Id_TEMP__c</fullName>
    <formula>BillToContactFilter__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Id TEMP</label>
    <type>Text</type>
</CustomField>