unpackaged/main/default/objects/Account/fields/billing_cycle__c.field-meta.xml
<CustomField>
    <fullName>billing_cycle__c</fullName>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly – Jan / Apr / Jul / Oct</fullName>
            </value>
            <value>
                <fullName>Quarterly – Feb / May / Aug / Nov</fullName>
            </value>
            <value>
                <fullName>Quarterly – Mar / Jun / Sept / Dec</fullName>
            </value>
            <value>
                <fullName>Non-Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>