unpackaged/main/default/objects/Account/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Billing</fullName>
            </value>
            <value>
                <fullName>Monthly Fixed Instalment</fullName>
            </value>
            <value>
                <fullName>Royalty Reporting</fullName>
            </value>
            <value>
                <fullName>Prepayment</fullName>
            </value>
            <value>
                <fullName>Invoice on Purchase</fullName>
            </value>
            <value>
                <fullName>Academic/Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>