unpackaged/main/default/objects/Account/fields/BillToContactFilter__c.field-meta.xml
<CustomField>
    <fullName>BillToContactFilter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Billing Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>