unpackaged/main/default/objects/Account/fields/Buying_Influencer_Count__c.field-meta.xml
<CustomField>
    <fullName>Buying_Influencer_Count__c</fullName>
    <label>Buying Influencer Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>