unpackaged/main/default/objects/Account/fields/CGA_Contacts__c.field-meta.xml
<CustomField>
    <fullName>CGA_Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CGA Contacts</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CGA Contacts</relationshipLabel>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>