unpackaged/main/default/objects/Account/fields/Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost__c</fullName>
    <label>#Closed Lost</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>