unpackaged/main/default/objects/Account/fields/Company_Technologies__c.field-meta.xml
<CustomField>
    <fullName>Company_Technologies__c</fullName>
    <label>Company Technologies</label>
    <length>100</length>
    <type>Text</type>
</CustomField>