unpackaged/main/default/objects/Account/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description>2. Competitors - Field at the Account level for AEs to input the competitor currently being used instead of ITProTV per Chris Arias (Pardot)</description>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBT Nuggets</fullName>
            </value>
            <value>
                <fullName>Cloud Guru</fullName>
            </value>
            <value>
                <fullName>Cybrary</fullName>
            </value>
            <value>
                <fullName>Don&#39;t know</fullName>
            </value>
            <value>
                <fullName>Ed2Go</fullName>
            </value>
            <value>
                <fullName>ILT (Instructor Led Training)</fullName>
            </value>
            <value>
                <fullName>LinkedIn Learning/Lynda</fullName>
            </value>
            <value>
                <fullName>Pluralsight</fullName>
            </value>
            <value>
                <fullName>Skillsoft</fullName>
            </value>
            <value>
                <fullName>UCertify</fullName>
            </value>
            <value>
                <fullName>Udemy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>