unpackaged/main/default/objects/Account/fields/Competitor_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Renewal_Date__c</fullName>
    <label>Competitor Renewal Date</label>
    <type>Date</type>
</CustomField>