unpackaged/main/default/objects/Account/fields/Contact_Grant_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Contact_Grant_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Grant Assignment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact_Grant_Assignment__c.Contact__r.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact_Grant_Assignment__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>