unpackaged/main/default/objects/Account/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>This is being pulled from Subscription Summary</description>
    <inlineHelpText>This is being pulled from Subscription Summary</inlineHelpText>
    <label>Contract End Date</label>
    <summarizedField>Subscription_Summary__c.End_Date__c</summarizedField>
    <summaryForeignKey>Subscription_Summary__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>