unpackaged/main/default/objects/Account/fields/Contract_lookup__c.field-meta.xml
<CustomField>
    <fullName>Contract_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract (lookup)</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>