unpackaged/main/default/objects/Account/fields/Copado_Demo_12__c.field-meta.xml
<CustomField>
    <fullName>Copado_Demo_12__c</fullName>
    <label>Copado Demo 12</label>
    <length>20</length>
    <type>Text</type>
</CustomField>