unpackaged/main/default/objects/Account/fields/Copado_Demo_Email__c.field-meta.xml
<CustomField>
    <fullName>Copado_Demo_Email__c</fullName>
    <label>Copado Demo Email</label>
    <type>Email</type>
</CustomField>