unpackaged/main/default/objects/Account/fields/Count_of_Activities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Activities__c</fullName>
    <description>Sum of Tasks where Related To field is equal to Account.</description>
    <inlineHelpText>Sum of Tasks where Related To field is equal to Account.</inlineHelpText>
    <label>Sum of Account Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>