unpackaged/main/default/objects/Account/fields/Count_of_Contact_Roles__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Contact_Roles__c</fullName>
    <label>Count of Contact Roles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>