unpackaged/main/default/objects/Account/fields/Count_Won_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_Won_opportunities__c</fullName>
    <label>#Count Won opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>