unpackaged/main/default/objects/Account/fields/CustomerPhase__c.field-meta.xml
<CustomField>
    <fullName>CustomerPhase__c</fullName>
    <label>Customer Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Phase</valueSetName>
    </valueSet>
</CustomField>