unpackaged/main/default/objects/Account/fields/Demo_11__c.field-meta.xml
<CustomField>
    <fullName>Demo_11__c</fullName>
    <label>Demo_11</label>
    <length>10</length>
    <type>Text</type>
</CustomField>