unpackaged/main/default/objects/Account/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <label>Demo text updated</label>
    <length>15</length>
    <type>Text</type>
</CustomField>