unpackaged/main/default/objects/Account/fields/Demo_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Demo_Field_2__c</fullName>
    <label>Demo Field 2</label>
    <length>19</length>
    <type>Text</type>
</CustomField>