unpackaged/main/default/objects/Account/fields/Demo_Rollback__c.field-meta.xml
<CustomField>
    <fullName>Demo_Rollback__c</fullName>
    <label>Demo_Rollback</label>
    <length>17</length>
    <type>Text</type>
</CustomField>