unpackaged/main/default/objects/Account/fields/DiscoverOrg_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>DiscoverOrg_Company_ID__c</fullName>
    <label>DiscoverOrg Company ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>