unpackaged/main/default/objects/Account/fields/Dup_PL__c.field-meta.xml
<CustomField>
    <fullName>Dup_PL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dup PL</label>
    <type>Checkbox</type>
</CustomField>