unpackaged/main/default/objects/Account/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <label>Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10 employees</fullName>
            </value>
            <value>
                <fullName>11-50 employees</fullName>
            </value>
            <value>
                <fullName>51-200 employees</fullName>
            </value>
            <value>
                <fullName>201-500 employees</fullName>
            </value>
            <value>
                <fullName>501-1,000 employees</fullName>
            </value>
            <value>
                <fullName>1,001-5,000 employees</fullName>
            </value>
            <value>
                <fullName>5,001-10,000 employees</fullName>
            </value>
            <value>
                <fullName>10,000+ employees</fullName>
            </value>
            <value>
                <fullName>Self-employed</fullName>
                <isActive>false</isActive>
                <label>Self-employed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>