unpackaged/main/default/objects/Account/fields/Financial_Status__c.field-meta.xml
<CustomField>
    <fullName>Financial_Status__c</fullName>
    <label>Financial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Non-Recurring</fullName>
                <isActive>false</isActive>
                <label>Non-Recurring</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
                <isActive>false</isActive>
                <label>Recurring</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>