unpackaged/main/default/objects/Account/fields/Fortune_Rank__c.field-meta.xml
<CustomField>
    <fullName>Fortune_Rank__c</fullName>
    <label>Fortune Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>