unpackaged/main/default/objects/Account/fields/Fulfillment_Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Account_External_Id__c</fullName>
    <description>The external account id from the fulfillment system</description>
    <label>Fulfillment Account External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>