unpackaged/main/default/objects/Account/fields/Fulfilment_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Type__c</fullName>
    <label>Fulfilment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vouchers</fullName>
            </value>
            <value>
                <fullName>Integration - LTI</fullName>
            </value>
            <value>
                <fullName>Integration - API</fullName>
            </value>
            <value>
                <fullName>Manual Account Creation - Customer Admin</fullName>
            </value>
            <value>
                <fullName>Voucher LTI</fullName>
            </value>
            <value>
                <fullName>Portal Admin</fullName>
            </value>
            <value>
                <fullName>Site License</fullName>
            </value>
            <value>
                <fullName>Academic Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>