unpackaged/main/default/objects/Account/fields/GSA__c.field-meta.xml
<CustomField>
    <fullName>GSA__c</fullName>
    <description>Government Services Administration number for Government Accounts</description>
    <label>GSA #</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GS-35F-474DA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>