unpackaged/main/default/objects/Account/fields/HealthStatus__c.field-meta.xml
<CustomField>
    <fullName>HealthStatus__c</fullName>
    <label>Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Health_Status</valueSetName>
    </valueSet>
</CustomField>