unpackaged/main/default/objects/Account/fields/HealthStatusFlag__c.field-meta.xml
<CustomField>
    <fullName>HealthStatusFlag__c</fullName>
    <formula>IMAGE(
CASE(HealthStatus__c,
&quot;Green&quot;, &quot;/resource/1547315604000/GraphicsPackNew/silk/16/silk/flag_green.png&quot;,
&quot;Yellow&quot;, &quot;/resource/1547315604000/GraphicsPackNew/silk/16/silk/flag_yellow.png&quot;,
&quot;Orange&quot;, &quot;/resource/1547315604000/GraphicsPackNew/silk/16/silk/flag_orange.png&quot;,
&quot;Red&quot;, &quot;/resource/1547315604000/GraphicsPackNew/silk/16/silk/flag_red.png&quot;,
&quot;Black&quot;, &quot;/resource/1547315604000/GraphicsPackNew/silk/16/silk/cross.png&quot;,
&quot;/s.gif&quot;),
&quot;Dependent Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Status Flag</label>
    <type>Text</type>
</CustomField>