unpackaged/main/default/objects/Account/fields/HealthStatusReason__c.field-meta.xml
<CustomField>
    <fullName>HealthStatusReason__c</fullName>
    <label>Health Status Reason &amp; Value Statements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>