unpackaged/main/default/objects/Account/fields/How_many_IT_Employees__c.field-meta.xml
<CustomField>
    <fullName>How_many_IT_Employees__c</fullName>
    <label># of IT Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>