unpackaged/main/default/objects/Account/fields/Inactive_Account__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cancelled -- This field was marked for removal and deletion on 1/21/2019</description>
    <label>Inactive Account - Deleted 1/21/2019</label>
    <type>Checkbox</type>
</CustomField>