unpackaged/main/default/objects/Account/fields/Infusionsoft_per_seat__c.field-meta.xml
<CustomField>
    <fullName>Infusionsoft_per_seat__c</fullName>
    <formula>IF(ISBLANK (nfusion_price__c) || ISBLANK (nfusion_seats__c), 
NULL, nfusion_price__c/nfusion_seats__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Infusionsoft per seat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>