unpackaged/main/default/objects/Account/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Keys</fullName>
            </value>
            <value>
                <fullName>LTI</fullName>
            </value>
            <value>
                <fullName>No Integration</fullName>
            </value>
            <value>
                <fullName>OATH2</fullName>
            </value>
            <value>
                <fullName>SAML</fullName>
            </value>
            <value>
                <fullName>SCORM</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>