unpackaged/main/default/objects/Account/fields/Invoice_MIN_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_MIN_Date__c</fullName>
    <description>This returns the first invoice date related to an account</description>
    <label>Invoice MIN Date</label>
    <summarizedField>blng__Invoice__c.blng__InvoiceDate__c</summarizedField>
    <summaryForeignKey>blng__Invoice__c.blng__Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>