unpackaged/main/default/objects/Account/fields/Is_Child_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Child_Account__c</fullName>
    <formula>IF(ISBLANK(ParentId), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Child Account</label>
    <type>Checkbox</type>
</CustomField>