unpackaged/main/default/objects/Account/fields/IT_Employees__c.field-meta.xml
<CustomField>
    <fullName>IT_Employees__c</fullName>
    <label>IT Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>