unpackaged/main/default/objects/Account/fields/LAST_Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>LAST_Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LAST Payment Transaction</label>
    <referenceTo>blng__PaymentTransaction__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>