unpackaged/main/default/objects/Account/fields/Legacy_Portal__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Portal</label>
    <type>Checkbox</type>
</CustomField>