unpackaged/main/default/objects/Account/fields/Legacy_Portal_No_Activate__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Portal_No_Activate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Portal</label>
    <type>Checkbox</type>
</CustomField>