unpackaged/main/default/objects/Account/fields/Max_End_Date_with_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Max_End_Date_with_Promotion__c</fullName>
    <label>Max End Date with Promotion</label>
    <type>Date</type>
</CustomField>