unpackaged/main/default/objects/Account/fields/Max_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Invoice_Date__c</fullName>
    <inlineHelpText>Grabs the last posted invoice date</inlineHelpText>
    <label>Max Invoice Date</label>
    <summarizedField>blng__Invoice__c.blng__InvoicePostedDate__c</summarizedField>
    <summaryForeignKey>blng__Invoice__c.blng__Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>