unpackaged/main/default/objects/Account/fields/Migrated_Account__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated Account</label>
    <type>Checkbox</type>
</CustomField>